# jolt-physics-rs

./: .gitignore  Cargo.toml  README.MD  build.rs  cl.bat
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: win-jolt-cmake.bat  win-lto-build.bat  win-lto-release.bat  win-lto-run.bat
src/: base.h  base.rs  body.cpp  body.rs  character.cpp  character.rs  consts.rs  debug.cpp  debug.h  debug.rs  error.rs  ffi.h  keys.rs  layer.rs  lib.rs  shape.cpp  shape.rs  system.cpp  system.rs  test_callback.cpp  test_callback.rs  vtable.rs
