[package]
name = "jolt-physics-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = { version = "1.0", features = ["default", "c++17"] }
glam = { version = "0.29", features = ["approx", "serde"] }
glam-ext = { version = "0.2", optional = true, features = ["approx", "serde"] }
jolt-macros = { path = "./macros" }
libc = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
static_assertions = "1.1"
thiserror = "1.0"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cxx-build = "1.0"
vcvars = "0.1.6"

[features]
default = ["deterministic", "glam-ext"]
# default = ["deterministic", "glam-ext", "debug-renderer", "debug-print"]
deterministic = []
glam-ext = ["dep:glam-ext"]
profile = []
debug-renderer = []
debug-print = []

[[bin]]
name = "jolt-demo"
required-features = ["debug-renderer"]
