[package]
name = "jolt-physics-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = { version = "1.0", features = ["default", "c++17"] }
glam = { version = "0.30", features = ["approx"] }
glam-ext = { version = "0.3", optional = true, features = ["approx"] }
jolt-macros = { path = "./macros" }
libc = "0.2"
rkyv = { version = "0.8", optional = true }
serde = { version= "1.0", optional = true, features = [ "serde_derive" ] }
static_assertions = "1.1"
thiserror = "1.0"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cxx-build = "1.0"
vcvars = "0.1.6"

[features]
default = ["deterministic", "glam-ext"]
# default = ["deterministic", "glam-ext", "debug-renderer", "debug-print", "serde", "rkyv"]
deterministic = []
glam-ext = ["dep:glam-ext"]
profile = []
debug-renderer = []
debug-print = []
serde = ["dep:serde", "glam/serde", "glam-ext/serde" ]
rkyv = ["dep:rkyv", "glam/rkyv", "glam/bytecheck", "glam-ext/rkyv"]

[[bin]]
name = "jolt-demo"
required-features = ["debug-renderer"]
