[package]
name = "jolt-macros"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SlimeYummy/jolt-physics-rs"
homepage = "https://github.com/SlimeYummy/jolt-physics-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
